--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
+    "redis": "^3.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
